# poeper

./: .dockerignore  .env.production.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  poep-zandbak.ipynb  production.py  pyproject.toml  start-production.sh
assets/: basiswoorden.txt  wordlist.txt
libs/: __init__.py  common_word.py  game.py  performance.py  word_filter.py  word_ladder.py
static/: admin.css  admin.html  admin.js  app.js  index.html  styles.css
test/: test_admin.py  test_api.py  test_common_word.py  test_game.py  test_performance.py  test_production.py  test_word_filter.py  test_word_ladder.py
