[project]
name = "poep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.139.2",
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "orjson>=3.11.9",
    "pytest>=9.1.1",
    "uvicorn>=0.51.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
